Bug 1588614 - Cache the document's effective storage principal to avoid running excessive anti-tracking checks; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D49791